[package]
name = "wolf63x-sniper"
version = "0.1.0"
edition = "2021"
description = "Fast Solana Sniper Bot with web interface"
authors = ["Wolf63x Team"]

[lib]
name = "wolf63x_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Solana dependencies
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"
solana-account-decoder = "1.17"

# Web and WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document"] }
serde-wasm-bindgen = "0.5"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
url = "2.4"
once_cell = "1.18"
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"
borsh = "0.10"
byteorder = "1.4"
reqwest = { version = "0.11", features = ["json"] }
console_error_panic_hook = "0.1.7"

# WebSocket for Pump.fun pairs
futures-util = "0.3"
tokio-tungstenite = "0.21"
serde_json = "1.0"

# Web server
axum = "0.6.0"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tower = "0.4.13"

# Tauri for desktop app
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tauri = { version = "1.4", features = ["api-all"] }

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.7"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
